...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="safe-area"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" title="Chat" id="chat-nav-item">
                        <barButtonItem key="rightBarButtonItem" title="End" id="end-button">
                            <connections>
                                <action selector="endTapped:" destination="chat-vc" id="end-action"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
